feat: refactoring ui

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/card": "^2.0.33",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
     "ethers": "^6.13.1",
     "express": "^4.19.2",
+    "framer-motion": "^11.3.8",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
