--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/card": "^2.0.33",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
+    "axios": "^1.7.2",
     "ethers": "^6.13.1",
     "express": "^4.19.2",
     "framer-motion": "^11.3.8",
